--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,8 @@
-[tool.poetry.dependencies]
-python = "3.10.13"
+[tool.poetry]
 name = "solsnipersignals"
 version = "0.1.0"
 description = ""
-authors = ["you"]
+authors = ["droidey82"]
 
 [tool.poetry.dependencies]
 python = "3.10.13"
@@ -15,5 +14,5 @@ python-dotenv = "*"
 python-telegram-bot = "13.15"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
