--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["droidey82"]
 
 [tool.poetry.dependencies]
-python = "3.10.13"
+python = ">=3.10,<3.11"
 Flask = "2.2.5"
 requests = "2.31.0"
 gspread = "5.11.3"
