--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests==2.31.0
-gspread==5.11.3
-oauth2client==4.1.3
-python-dotenv==1.0.1
-python-telegram-bot
+requests
+python-dotenv
+gspread
+oauth2client
+python-telegram-bot==20.0
