--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==13.15
 requests
-gspread==5.12.0
-oauth2client==4.1.3
-python-dotenv==1.0.1
+python-dotenv
+python-telegram-bot==13.12.3
+gspread
+oauth2client
