--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-python-telegram-bot==13.15
+requests
 python-dotenv
-websockets>=10.0
+gspread
+oauth2client
+python-telegram-bot==13.15
+websockets>=10.0,<11.0
+certifi
